prisma 및 퀘스트 기능 수정
